syntax = "proto3";

package openagents.hydra.v1;

import "google/protobuf/struct.proto";
import "openagents/lightning/v1/wallet_executor.proto";

// Hydra FX contracts for MVP-3 runtime commerce lanes.
//
// These wire messages back deterministic FX RFQ, quote selection, and
// settlement receipt surfaces for Hydra authority endpoints.

enum HydraFxErrorCode {
  HYDRA_FX_ERROR_CODE_UNSPECIFIED = 0;
  HYDRA_FX_ERROR_CODE_INVALID_REQUEST = 1;
  HYDRA_FX_ERROR_CODE_NOT_FOUND = 2;
  HYDRA_FX_ERROR_CODE_CONFLICT = 3;
  HYDRA_FX_ERROR_CODE_POLICY_DENIED = 4;
  HYDRA_FX_ERROR_CODE_DEPENDENCY_UNAVAILABLE = 5;
  HYDRA_FX_ERROR_CODE_INTERNAL_ERROR = 6;
}

message HydraFxError {
  HydraFxErrorCode code = 1;
  string message = 2;
  bool retryable = 3;
  google.protobuf.Struct details = 4;
}

enum FxQuoteStatus {
  FX_QUOTE_STATUS_UNSPECIFIED = 0;
  FX_QUOTE_STATUS_ACTIVE = 1;
  FX_QUOTE_STATUS_EXPIRED = 2;
  FX_QUOTE_STATUS_WITHDRAWN = 3;
  FX_QUOTE_STATUS_SELECTED = 4;
}

enum FxSettlementStatus {
  FX_SETTLEMENT_STATUS_UNSPECIFIED = 0;
  FX_SETTLEMENT_STATUS_RELEASED = 1;
  FX_SETTLEMENT_STATUS_WITHHELD = 2;
  FX_SETTLEMENT_STATUS_FAILED = 3;
}

message FxMoneyV1 {
  string asset = 1;
  uint64 amount = 2;
  string unit = 3;
}

message FxRfqRequestV1 {
  string schema = 1;
  string idempotency_key = 2;
  string requester_id = 3;
  string budget_scope_id = 4;
  FxMoneyV1 sell = 5;
  string buy_asset = 6;
  uint64 min_buy_amount = 7;
  uint32 max_spread_bps = 8;
  uint32 max_fee_bps = 9;
  uint32 max_latency_ms = 10;
  uint32 quote_ttl_seconds = 11;
  google.protobuf.Struct policy_context = 12;
}

message FxRfqRecordV1 {
  string rfq_id = 1;
  string requester_id = 2;
  string budget_scope_id = 3;
  FxMoneyV1 sell = 4;
  string buy_asset = 5;
  uint64 min_buy_amount = 6;
  uint32 max_spread_bps = 7;
  uint32 max_fee_bps = 8;
  uint32 max_latency_ms = 9;
  uint32 quote_ttl_seconds = 10;
  string status = 11;
  uint64 created_at_unix = 12;
  uint64 expires_at_unix = 13;
  google.protobuf.Struct policy_context = 14;
}

message FxRfqResponseV1 {
  string schema = 1;
  FxRfqRecordV1 rfq = 2;
}

message FxQuoteV1 {
  string quote_id = 1;
  string rfq_id = 2;
  string provider_id = 3;
  FxMoneyV1 sell = 4;
  FxMoneyV1 buy = 5;
  uint32 spread_bps = 6;
  uint32 fee_bps = 7;
  uint32 latency_ms = 8;
  uint32 reliability_bps = 9;
  uint64 valid_until_unix = 10;
  FxQuoteStatus status = 11;
  google.protobuf.Struct constraints = 12;
  string quote_sha256 = 13;
}

message FxQuoteUpsertRequestV1 {
  string schema = 1;
  string idempotency_key = 2;
  FxQuoteV1 quote = 3;
}

message FxQuoteUpsertResponseV1 {
  string schema = 1;
  FxQuoteV1 quote = 2;
}

message FxSelectRequestV1 {
  string schema = 1;
  string idempotency_key = 2;
  string rfq_id = 3;
  string policy = 4;
}

message FxSelectionFactorsV1 {
  uint32 expected_spread_bps = 1;
  uint32 expected_fee_bps = 2;
  double confidence = 3;
  repeated string policy_notes = 4;
}

message FxDecisionReceiptLinkageV1 {
  string receipt_schema = 1;
  string receipt_id = 2;
  string canonical_json_sha256 = 3;
}

message FxSelectResponseV1 {
  string schema = 1;
  string rfq_id = 2;
  string policy = 3;
  string decision_sha256 = 4;
  FxQuoteV1 selected = 5;
  repeated FxQuoteV1 candidates = 6;
  FxSelectionFactorsV1 factors = 7;
  FxDecisionReceiptLinkageV1 receipt = 8;
  uint64 decided_at_unix = 9;
}

message FxSettleRequestV1 {
  string schema = 1;
  string idempotency_key = 2;
  string rfq_id = 3;
  string quote_id = 4;
  string reservation_id = 5;
  google.protobuf.Struct policy_context = 6;
}

message FxSettlementReceiptV1 {
  string schema = 1;
  string receipt_id = 2;
  string settlement_id = 3;
  string rfq_id = 4;
  string quote_id = 5;
  string provider_id = 6;
  FxMoneyV1 sell = 7;
  FxMoneyV1 buy = 8;
  uint32 spread_bps = 9;
  uint32 fee_bps = 10;
  uint64 settled_at_unix = 11;
  openagents.lightning.v1.WalletExecutionReceipt wallet_receipt = 12;
  string canonical_json_sha256 = 13;
}

message FxSettleResponseV1 {
  string schema = 1;
  string settlement_id = 2;
  FxSettlementStatus status = 3;
  FxSettlementReceiptV1 receipt = 4;
}
